try to save apks from the purge

--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -30,7 +30,7 @@ jobs:
             -   name: Copy PR app
                 run: |
                     ls
-                    cp ./app/build/outputs/apk/full/${{ matrix.build_type }}/app-full-${{ matrix.build_type }}.apk ./pr.apk
+                    cp ./app/build/outputs/apk/full/${{ matrix.build_type }}/app-full-${{ matrix.build_type }}.apk ../pr.apk
                     ls
 
             -   uses: actions/checkout@v2
@@ -41,14 +41,14 @@ jobs:
             -   name: Copy PR app
                 run: |
                     ls
-                    cp ./app/build/outputs/apk/full/${{ matrix.build_type }}/app-full-${{ matrix.build_type }}.apk ./main.apk
+                    cp ./app/build/outputs/apk/full/${{ matrix.build_type }}/app-full-${{ matrix.build_type }}.apk ../main.apk
                     ls
             -   name: diff between apks
                 id: diff
                 run: |
                     curl -L https://github.com/JakeWharton/diffuse/releases/download/0.1.0/diffuse-0.1.0-binary.jar --output diffuse.jar
                     chmod +x diffuse.jar
-                    COMMENT=$(./diffuse.jar diff main.apk pr.apk > summary.md)
+                    COMMENT=$(./diffuse.jar diff ../main.apk ../pr.apk)
                     echo "::set-output name=comment::${COMMENT}"
             -   uses: actions/github-script@v5
                 with:
