--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                build_type: [ debug, release ]
+                build_type: [ debug ]
         steps:
             -   uses: actions/checkout@v2
             -   name: Create empty keystore
