--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -52,13 +52,13 @@ jobs:
                     echo "::set-output name=comment::${COMMENT}"
             -   uses: actions/github-script@v5
                 env:
-                    COMMENT: ${{ steps.id.outputs.comment }}
+                    COMMENT: ${{ steps.diff.outputs.comment }}
                 with:
                     script: |
-                        const { COMMENT } = process.env
-                        github.rest.issues.createComment({
-                          issue_number: context.issue.number,
-                          owner: context.repo.owner,
-                          repo: context.repo.repo,
-                          body: "```\n" + COMMENT "\n```"
+                        const comment = "```\n" + process.env.COMMENT "\n```"
+                        await github.rest.issues.createComment({
+                            issue_number: context.issue.number,
+                            owner: context.repo.owner,
+                            repo: context.repo.repo,
+                            body: comment
                         })
