--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -50,15 +50,15 @@ jobs:
                     chmod +x diffuse.jar
                     COMMENT=$(./diffuse.jar diff ../main.apk ../pr.apk)
                     echo "::set-output name=comment::${COMMENT}"
-            -   uses: actions/github-script@v5
+            -   uses: actions/github-script@v3
                 env:
                     COMMENT: ${{ steps.diff.outputs.comment }}
                 with:
                     script: |
                         const comment = "```\n" + process.env.COMMENT "\n```"
-                        await github.rest.issues.createComment({
-                            issue_number: context.issue.number,
-                            owner: context.repo.owner,
-                            repo: context.repo.repo,
-                            body: comment
+                        github.issues.createComment({
+                          issue_number: context.issue.number,
+                          owner: context.repo.owner,
+                          repo: context.repo.repo,
+                          body: comment,
                         })
