--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -55,10 +55,9 @@ jobs:
                     COMMENT: ${{ steps.diff.outputs.comment }}
                 with:
                     script: |
-                        const comment = "```\n" + process.env.COMMENT "\n```"
                         github.issues.createComment({
                           issue_number: context.issue.number,
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          body: comment,
+                          body: ${{ steps.diff.outputs.comment }},
                         })
