--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -59,5 +59,5 @@ jobs:
                           issue_number: context.issue.number,
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          body: ${{ steps.diff.outputs.comment }},
+                          body: "${{ steps.diff.outputs.comment }}",
                         })
