--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -52,15 +52,13 @@ jobs:
                     COMMENT="${COMMENT//'%'/'%25'}"
                     COMMENT="${COMMENT//$'\n'/'%0A'}"
                     COMMENT="${COMMENT//$'\r'/'%0D'}"
-                    echo "::set-output name=comment::${COMMENT}"
+                    echo "::set-env name=COMMENT::$COMMENT"
             -   uses: actions/github-script@v3
-                env:
-                    COMMENT: ${{ steps.diff.outputs.comment }}
                 with:
                     script: |
                         github.issues.createComment({
                           issue_number: context.issue.number,
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          body: "${{ steps.diff.outputs.comment }}",
+                          body: "${{ env.COMMENT }}",
                         })
