--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -52,7 +52,7 @@ jobs:
                     COMMENT="${COMMENT//'%'/'%25'}"
                     COMMENT="${COMMENT//$'\n'/'%0A'}"
                     COMMENT="${COMMENT//$'\r'/'%0D'}"
-                    echo "::set-env name=COMMENT::$COMMENT"
+                    echo "COMMENT=$COMMENT" >> $GITHUB_ENV
             -   uses: actions/github-script@v3
                 with:
                     script: |
