--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -60,5 +60,5 @@ jobs:
                           issue_number: context.issue.number,
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          body: "${{ env.COMMENT }}",
+                          body: "```${{ env.COMMENT }}```",
                         })
