--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -49,16 +49,21 @@ jobs:
                     curl -L https://github.com/JakeWharton/diffuse/releases/download/0.1.0/diffuse-0.1.0-binary.jar --output diffuse.jar
                     chmod +x diffuse.jar
                     COMMENT=$(./diffuse.jar diff ../main.apk ../pr.apk)
-                    # COMMENT="${COMMENT//'%'/'%25'}"
-                    # COMMENT="${COMMENT//$'\n'/'%0A'}"
-                    # COMMENT="${COMMENT//$'\r'/'%0D'}"
+                    COMMENT="${COMMENT//'%'/'%25'}"
+                    COMMENT="${COMMENT//$'\n'/'%0A'}"
+                    COMMENT="${COMMENT//$'\r'/'%0D'}"
                     echo "COMMENT=$COMMENT" >> $GITHUB_ENV
             -   uses: actions/github-script@v3
                 with:
                     script: |
+                        var comment = `${{ env.COMMENT }}`
+                        comment = comment.replaceAll('%25', '%')
+                        comment = comment.replaceAll('%0A', '\n')
+                        comment = comment.replaceAll('%0D', '\r')
+                        comment = "```" + comment + "```"
                         github.issues.createComment({
                           issue_number: context.issue.number,
                           owner: context.repo.owner,
                           repo: context.repo.repo,
-                          body: "```${{ env.COMMENT }}```",
+                          body: comment,
                         })
