--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,11 @@
             android:name=".CofiApp"
             android:supportsRtl="true"
             android:theme="@style/Theme.Cofi">
+        <profileable android:shell="${profileable}" android:enabled="${profileable}"
+                tools:targetApi="q" />
         <activity
                 android:name=".MainActivity"
                 android:configChanges="keyboard|keyboardHidden|screenSize|smallestScreenSize|screenLayout|orientation|uiMode"
-                android:label="@string/app_name"
                 android:launchMode="singleInstance"
                 android:supportsPictureInPicture="true"
                 android:theme="@style/Theme.Cofi"
