--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.1.1'
-        kotlin_version = '1.6.10'
+        compose_version = '1.2.0-beta01'
+        kotlin_version = '1.6.21'
     }
     repositories {
         google()
