--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,9 +153,12 @@ dependencies {
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
-    implementation 'com.google.accompanist:accompanist-insets:0.23.0'
-    implementation "com.google.accompanist:accompanist-flowlayout:0.23.0"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.0"
+    def accompanist_version = "0.24.8-beta"
+
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
