--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,15 +148,15 @@ dependencies {
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation "androidx.compose.ui:ui:1.2.0-rc03"
+    implementation "androidx.compose.ui:ui:1.3.0-alpha01"
     // Tooling support (Previews, etc.)
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.0-rc03"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.0-rc03"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-alpha01"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-alpha01"
 
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation "androidx.compose.foundation:foundation:1.2.0-rc03"
+    implementation "androidx.compose.foundation:foundation:1.3.0-alpha01"
     // Material Design
-    implementation "androidx.compose.material:material:1.2.0-rc03"
+    implementation "androidx.compose.material:material:1.3.0-alpha01"
     implementation "androidx.compose.material3:material3:1.0.0-alpha14"
     implementation "androidx.compose.material3:material3-window-size-class:1.0.0-alpha14"
 
@@ -166,9 +166,9 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.0"
 
     // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:1.2.0-rc03"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.0-alpha01"
     // Jetpack Utils
-    def accompanist_version = "0.24.10-beta"
+    def accompanist_version = "0.24.13-rc"
 
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
@@ -186,7 +186,7 @@ dependencies {
 
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.2.0-rc03"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-alpha01"
     testImplementation 'junit:junit:4.13.2'
 }
 
