Fix performance issue with sourceRectHint

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
                 android:exported="true"
                 android:launchMode="singleInstance"
                 android:supportsPictureInPicture="true"
+                android:resizeableActivity="true"
                 android:theme="@style/Theme.Cofi"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
