--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,36 +147,34 @@ dependencies {
 
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation "androidx.compose.ui:ui:1.3.0-alpha01"
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation "androidx.compose.ui:ui:1.3.0-alpha03"
     // Tooling support (Previews, etc.)
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-alpha01"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-alpha01"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-alpha03"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-alpha03"
 
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation "androidx.compose.foundation:foundation:1.3.0-alpha01"
+    implementation "androidx.compose.foundation:foundation:1.3.0-alpha03"
     // Material Design
-    implementation "androidx.compose.material:material:1.3.0-alpha01"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha14"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-alpha14"
+    implementation "androidx.compose.material:material:1.3.0-alpha03"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha16"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-alpha16"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "androidx.navigation:navigation-compose:2.5.1"
 
     // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:1.3.0-alpha01"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.0-alpha03"
     // Jetpack Utils
-    def accompanist_version = "0.24.13-rc"
-
-    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
-    implementation 'androidx.compose.animation:animation-graphics:1.1.1'
+    implementation "com.google.accompanist:accompanist-flowlayout:0.26.1-alpha"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.1-alpha"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.26.1-alpha"
+    implementation 'androidx.compose.animation:animation-graphics:1.2.1'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.activity:activity-compose:1.5.0"
+    implementation "androidx.activity:activity-compose:1.5.1"
     //Room
     def room_version = "2.5.0-alpha02"
 
@@ -187,7 +185,7 @@ dependencies {
 
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-alpha01"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-alpha03"
     testImplementation 'junit:junit:4.13.2'
 }
 
