add support for predictive back gesture animation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,7 +174,7 @@ dependencies {
     implementation 'androidx.compose.animation:animation-graphics:1.2.1'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.activity:activity-compose:1.5.1"
+    implementation "androidx.activity:activity-compose:1.6.0-beta01"
     //Room
     def room_version = "2.5.0-alpha02"
 
