--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,9 +168,9 @@ dependencies {
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:1.3.0-beta01"
     // Jetpack Utils
-    implementation "com.google.accompanist:accompanist-flowlayout:0.26.1-alpha"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.1-alpha"
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.26.1-alpha"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.26.2-beta"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.2-beta"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.26.2-beta"
     implementation 'androidx.compose.animation:animation-graphics:1.2.1'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
