--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,7 @@ android {
         // Adds exported schema location as test app assets.
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
+    namespace 'com.omelan.cofi'
 
 }
 
