Added Turkish translation to build.gradle file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
-        resConfigs 'en', 'pl', 'it', 'de'
+        resConfigs 'en', 'pl', 'it', 'de', 'tr'
         manifestPlaceholders = [profileable: false]
 
     }
