--- a/.github/workflows/Emulator.yml
+++ b/.github/workflows/Emulator.yml
@@ -40,6 +40,6 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
-          arch: x86_64
+          arch: x86
 #           emulator-build: 7075546
           script: './gradlew connectedFullDebugAndroidTest'
