docs: use jekyll-relative-links

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -20,6 +20,7 @@ gem "minima", git: "https://github.com/jekyll/minima"
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.6"
+  gem 'jekyll-relative-links'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
@@ -35,5 +36,3 @@ gem "wdm", "~> 0.1.0", :install_if => Gem.win_platform?
 # kramdown v2 ships without the gfm parser by default. If you're using
 # kramdown v1, comment out this line.
 gem "kramdown-parser-gfm"
-
-
