--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         applicationId "com.omelan.cofi"
-        minSdkVersion 24
+        minSdkVersion 25
         targetSdkVersion 33
         compileSdkVersion 33
         versionCode 83
@@ -98,7 +98,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.2.0"
+        kotlinCompilerExtensionVersion = "1.3.0"
     }
     packagingOptions {
         resources {
@@ -140,6 +140,7 @@ configurations {
 }
 
 dependencies {
+    implementation project(path: ':cofi-share')
     ktlint("com.pinterest:ktlint:0.47.1") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
@@ -149,15 +150,15 @@ dependencies {
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation "androidx.compose.ui:ui:1.3.0-rc01"
+    implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-rc01"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-rc01"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation "androidx.compose.foundation:foundation:1.3.0-rc01"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
-    implementation "androidx.compose.material:material:1.3.0-rc01"
+    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material3:material3:1.0.0-rc01"
     implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
 
@@ -167,7 +168,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.2"
 
     // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:1.3.0-rc01"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
     implementation "com.google.accompanist:accompanist-flowlayout:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.4-beta"
@@ -186,7 +187,7 @@ dependencies {
 
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-rc01"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     androidTestImplementation 'androidx.test:core-ktx:1.5.0-beta01'
     testImplementation 'junit:junit:4.13.2'
 }
