--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -31,5 +31,6 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.compose.ui:ui:$compose_version"
 }
