Success in sending data between WearOS and Android

--- a/cofi-wearos/build.gradle
+++ b/cofi-wearos/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.omelan.cofi.wearos"
+        applicationId "com.omelan.cofi"
         minSdk 25
         targetSdk 33
         versionCode 1
