--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,6 +148,8 @@ dependencies {
     }
 
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
+    implementation 'com.google.android.gms:play-services-wearable:18.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.compose.ui:ui:$compose_version"
