--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation 'androidx.test:core-ktx:1.4.0'
     //Room
     def room_version = "2.5.0-beta01"
 
@@ -46,4 +47,5 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
