--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -34,12 +34,20 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures { // Enables Jetpack Compose for this module
+        compose = true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.0"
+    }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.test:core-ktx:1.4.0'
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+
     //Room
     def room_version = "2.5.0-beta01"
 
