--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.test:core-ktx:1.4.0'
     implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
 
     //Room
     def room_version = "2.5.0-beta01"
