--- a/cofi-wearos/src/main/AndroidManifest.xml
+++ b/cofi-wearos/src/main/AndroidManifest.xml
@@ -6,29 +6,41 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@android:style/Theme.Material">
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@android:style/Theme.Material">
         <uses-library
-            android:name="com.google.android.wearable"
-            android:required="true" />
+                android:name="com.google.android.wearable"
+                android:required="true" />
 
         <meta-data
-            android:name="com.google.android.wearable.standalone"
-            android:value="true" />
+                android:name="com.google.android.wearable.standalone"
+                android:value="true" />
 
         <activity
-            android:name=".presentation.MainActivity"
-            android:exported="true"
-            android:theme="@android:style/Theme.Material">
+                android:name=".presentation.MainActivity"
+                android:exported="true"
+                android:theme="@android:style/Theme.Material">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+                android:name=".presentation.CofiWearableListenerService"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.CHANNEL_EVENT" />
+                <data
+                        android:host="*"
+                        android:pathPrefix="/cofi"
+                        android:scheme="wear" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
