Add multifunction button handling

--- a/cofi-wearos/build.gradle
+++ b/cofi-wearos/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha02"
+    implementation "androidx.wear:wear-input:1.1.0"
+
     //Room
     def room_version = "2.5.0-beta01"
 
