--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,13 +159,13 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.0-rc01"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
+    implementation "androidx.compose.material3:material3:1.0.0"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
@@ -173,13 +173,11 @@ dependencies {
     implementation "com.google.accompanist:accompanist-flowlayout:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.26.4-beta"
-    implementation 'androidx.compose.animation:animation-graphics:1.2.1'
+    implementation 'androidx.compose.animation:animation-graphics:1.3.0'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.activity:activity-compose:1.6.0"
+    implementation "androidx.activity:activity-compose:1.6.1"
     //Room
-    def room_version = "2.5.0-beta01"
-
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
