--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
 buildscript {
     ext {
         kotlin_version = '1.7.10'
-        compose_version = '1.3.0-rc01'
+        compose_version = '1.3.0'
         wear_compose_version = '1.0.2'
+        room_version = "2.5.0-beta01"
     }
     repositories {
         google()
