--- a/cofi-wearos/build.gradle
+++ b/cofi-wearos/build.gradle
@@ -75,6 +75,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'com.google.android.gms:play-services-wearable:18.0.0'
+    implementation "androidx.wear:wear-remote-interactions:1.0.0"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.wear.compose:compose-material:$wear_compose_version"
     implementation "androidx.wear.compose:compose-foundation:$wear_compose_version"
