change name of the module from cofi-wearos to wearOS

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,8 @@ dependencies {
 
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
     playStoreImplementation 'com.google.android.gms:play-services-wearable:18.0.0'
+    playStoreImplementation "androidx.wear:wear-remote-interactions:1.0.0"
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
