--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     //Room
 
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
