set app as non standalone

--- a/wearOS/src/main/AndroidManifest.xml
+++ b/wearOS/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
         <meta-data
                 android:name="com.google.android.wearable.standalone"
-                android:value="true" />
+                android:value="false" />
 
         <activity
                 android:name=".presentation.MainActivity"
