--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,8 +161,8 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.0"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0"
+    implementation "androidx.compose.material3:material3:1.0.1"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
@@ -175,7 +175,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-flowlayout:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.26.4-beta"
-    implementation 'androidx.compose.animation:animation-graphics:1.3.0'
+    implementation "androidx.compose.animation:animation-graphics:$compose_version"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.activity:activity-compose:1.6.1"
