--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -43,18 +43,19 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.test:core-ktx:1.4.0'
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    api 'androidx.appcompat:appcompat:1.5.1'
+    api "androidx.compose.ui:ui:$compose_version"
+    api 'androidx.test:core-ktx:1.4.0'
+    api "androidx.compose.foundation:foundation:$compose_version"
+    api "androidx.compose.material:material:$compose_version"
+    api "androidx.datastore:datastore-preferences:1.0.0"
 
     //Room
 
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    api "androidx.room:room-runtime:$room_version"
+    api 'androidx.test.ext:junit-ktx:1.1.4'
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    androidTestImplementation "androidx.room:room-testing:$room_version"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    api "androidx.room:room-ktx:$room_version"
+    androidTestApi "androidx.room:room-testing:$room_version"
+    androidTestApi "androidx.arch.core:core-testing:2.1.0"
 }
