moved kotlinx-coroutines-play-services dependency only to nonFree builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,8 +148,7 @@ dependencies {
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
     playStoreImplementation 'com.google.android.gms:play-services-wearable:18.0.0'
     playStoreImplementation "androidx.wear:wear-remote-interactions:1.0.0"
-
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+    playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     // Tooling support (Previews, etc.)
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
