--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha03"
     implementation "androidx.wear:wear-input:1.1.0"
+    implementation 'androidx.wear:wear:1.2.0'
 
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
