--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     ext {
         kotlin_version = '1.7.10'
         compose_version = '1.3.1'
-        wear_compose_version = '1.0.2'
-        room_version = "2.5.0-beta02"
+        wear_compose_version = '1.1.0'
+        room_version = "2.5.0-rc01"
     }
     repositories {
         google()
