--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation "androidx.wear.compose:compose-navigation:$wear_compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "com.google.accompanist:accompanist-pager:0.28.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
