Working open source acknowledgments on wearOS

--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.jaredsburrows.license'
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -70,6 +71,16 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+}
+
+licenseReport {
+    generateCsvReport = false
+    generateHtmlReport = false
+    generateJsonReport = true
+    // These options are ignored for Java projects
+    copyHtmlReportToAssets = false
+    copyHtmlReportToAssets = false
+    copyJsonReportToAssets = true
 }
 
 dependencies {
