Make WearOS builds smaller

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,6 +155,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     // Material Design
+    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material3:material3:1.0.1"
     implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
 
