--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -48,10 +48,10 @@ android {
 
 dependencies {
     api 'androidx.appcompat:appcompat:1.5.1'
-    api "androidx.compose.ui:ui:$compose_version"
-    api 'androidx.test:core-ktx:1.5.0'
-    api "androidx.compose.foundation:foundation:$compose_version"
-    api "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation 'androidx.test:core-ktx:1.5.0'
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
     api "androidx.datastore:datastore-preferences:1.0.0"
 
     //Room
