--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -14,6 +14,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        resConfigs 'en', 'de', 'es', 'it', 'nl', 'pl', 'tr'
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
