--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 buildscript {
     ext {
         kotlin_version = '1.7.10'
-        compose_version = '1.3.1'
-        wear_compose_version = '1.1.0'
-        room_version = "2.5.0-rc01"
+        compose_version = '1.3.3'
+        wear_compose_version = '1.1.1'
+        room_version = "2.5.0"
     }
     repositories {
         google()
