--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         versionName "1.13.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
         resConfigs 'en', 'de', 'es', 'it', 'nb', 'nl', 'pl', 'tr'
         manifestPlaceholders = [profileable: false]
     }
